test_case/rust-lang_rust/51104_399715982_75.rs
compile_fail,E0277\nfn some_func<T>(foo: T) {\n    println!(\"{:?}\", foo); // error: the trait `core::fmt::Debug` is not\ou're using does implement\nthe trait. Example:\n\n